# skyline-cadenza

./: .editorconfig  .gitignore  CLAUDE.md  Directory.Build.props  LICENSE  README.md  SkylineCadenza.sln  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  coverage-objectives.md  ingest-sources.md  settings.md  skyline-integration.md
docs/figures/: generate.py
notebooks/: README.md  _build_notebook.py  algorithm-comparison.ipynb
release-notes/: README.md  RELEASE_NOTES_next.md  RELEASE_NOTES_v26.1.0.md  RELEASE_NOTES_v26.2.0.md  RELEASE_NOTES_v26.2.1.md  RELEASE_NOTES_v26.2.2.md  RELEASE_NOTES_v26.2.3.md
src/SkylineCadenza.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SkylineCadenza.App.csproj  app.manifest
src/SkylineCadenza.App/ViewModels/: EnumEqualsConverter.cs  MainViewModel.cs  ModeEqualsConverter.cs
src/SkylineCadenza.App/tool-inf/: info.properties
src/SkylineCadenza.Cli/: Program.cs  SkylineCadenza.Cli.csproj
src/SkylineCadenza.Core/: SkylineCadenza.Core.csproj
src/SkylineCadenza.Core/Ingest/: BlibRetentionTimeReader.cs  CandidateBuilder.cs  CarafeLibraryReader.cs  CarafeTsvReader.cs  DiannParquetReader.cs  DiannRow.cs  (+5 more)
src/SkylineCadenza.Tests/: BlibAssayWriterTests.cs  BlibRetentionTimeReaderTests.cs  EndToEndPipelineTests.cs  FragmentClashTests.cs  ParsimonyEngineTests.cs  PeptideTransitionListBuilderTests.cs  SchedulerTests.cs  SkylineCadenza.Tests.csproj  SkylineSettingsConfiguratorTests.cs  ThermoCsvWriterTests.cs
testdata/: sample.blib
tools/: build-blib-fixture.py  install-dev.ps1
(+16 files in other folders)
