[project]
name = "skyline-cadenza-notebooks"
version = "0.1.0"
description = "Python tooling for the Cadenza algorithm-comparison notebook and fixture-build scripts."
readme = "notebooks/README.md"
requires-python = ">=3.11"

dependencies = [
    # Analysis + plotting
    "matplotlib>=3.8",
    "numpy>=1.26",
    # Notebook execution + format manipulation
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "nbformat>=5.10",
    # Pinned explicitly so VS Code's Jupyter / Python extensions can
    # use this venv as a kernel directly without an additional pip
    # install. Both would otherwise come in transitively through
    # `jupyter` but the resolver could drop them on a future upgrade.
    "ipykernel>=6.29",
    "debugpy>=1.8",
]

[tool.uv]
package = false
